--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.0.2",
+    "font-awesome": "^4.7.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
