--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.15"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
