--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^11.0.2",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.460.0",
+    "package-name": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -56,6 +57,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.22.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
   }
