--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,14 +1,19 @@
-name: Auto-Merge Pull Requests
+name: Auto Merge Pull Requests
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches:
+      - main
 
+      
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Enable Auto-Merge
-        run: gh pr merge ${{ github.event.pull_request.number }} --auto --squash
+        run: gh pr merge --auto --merge "${{ github.event.pull_request.html_url }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
